--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "liveServer.settings.port": 5501
+    "liveServer.settings.port": 5501,
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#34293C",
+        "titleBar.activeBackground": "#493A54",
+        "titleBar.activeForeground": "#FBFAFB"
+    }
 }
